# browser-butler

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  main.ts  types.ts
frontend/src/components/: CronInput.vue  LogTable.vue  StatusBadge.vue  TaskTable.vue
frontend/src/pages/: Dashboard.vue  Logs.vue  TaskConfig.vue
scripts/: ctl.sh  init_db.py  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routers/: __init__.py  events.py  logs.py  system.py  tasks.py
src/config/: settings.py
src/db/: __init__.py  database.py  models.py
src/schemas/: __init__.py  log.py  task.py
src/services/: __init__.py  agent_executor.py  event_manager.py  log_service.py  notification_service.py  scheduler_service.py  task_service.py
